# SWTORengine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: main.cpp
src/app/: App.cpp  App.h  Config.cpp  Config.h
src/capture/: CaptureSession.cpp  CaptureSession.h  WindowFinder.cpp  WindowFinder.h
src/gpu/: D3DContext.cpp  D3DContext.h  ShaderPipeline.cpp  ShaderPipeline.h
src/gpu/shaders/: bright_pass.hlsl  clarity_blur.hlsl  frame_blend.hlsl  fsr1_easu.hlsl  fsr1_rcas.hlsl  fxaa.hlsl  passthrough.hlsl  post_grade.hlsl  ui_theme.hlsl
src/presenter/: PresenterWindow.cpp  PresenterWindow.h  WindowTracker.cpp  WindowTracker.h
src/ui/: HotkeyManager.cpp  HotkeyManager.h  SettingsOverlay.cpp  SettingsOverlay.h  UiTheme.cpp  UiTheme.h
src/util/: D3DHelpers.h  PngDump.cpp  PngDump.h
